src/test/resources/com/puppycrawl/tools/checkstyle/checks/design/Temp2[InputInnerClass]#methodTest2().mjava
	void methodTest2() { //error
		System.identityHashCode("test2");
	}

